[tool.poetry]
name = "pbwrap"
version = "1.2.1"
description = "Pastebin API Wrapper"
authors = ["Mikts <mikts94@gmail.com>"]
license = "MIT"


classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
requests = "^2.23"
aiohttp = "^3.6"
twine = "^3.1"
wheel = "^0.34.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
black = "^21.5b2"
pytest = "^5.3"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
