[tool.poetry]
name = "pbwrap"
version = "1.4.0"
description = "A Pastebin API Wrapper for Python"
authors = ["Mikts <mikts94@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Mikts/pbwrap"
repository = "https://github.com/Mikts/pbwrap"
documentation = "https://pbwrap.readthedocs.io/en/latest/"
keywords = ["pastebin", "pbwrap", "wrapper", "api"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
requests = "^2.23"
aiohttp = "^3.6"
twine = "^3.1"
wheel = "^0.34.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
black = "^21.5b2"
pytest = "^5.3"
coverage = "^5.1"

[build-system]
requires = ["poetry>=1.00",
            "wheel"]
build-backend = "poetry.masonry.api"